--- a/examples/breaking_dam/breaking_dam.html
+++ b/examples/breaking_dam/breaking_dam.html
@@ -9,6 +9,7 @@
     <!--Meta-->
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no,user-scalable=no,maximum-scale=1">
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+    <script src="../../src/js/debugging/performance_debug.js"></script>
     <script src="../../src/js/hashers/bucket-grid/bucket-grid.js"></script>
     <script src="../../src/js/hashers/octree/static-octree.js"></script>
     <script src="../../src/js/hashers/octree/flattened-statistical-octree.js"></script>
