--- a/examples/breaking_dam/breaking_dam.html
+++ b/examples/breaking_dam/breaking_dam.html
@@ -13,8 +13,6 @@
     <script src="../../src/js/hashers/bucket-grid/bucket-face.js"></script>
     <script src="../../src/js/hashers/bucket-grid/bucket.js"></script>
     <script src="../../src/js/hashers/bucket-grid/bucket-grid.js"></script>
-    <script src="../../src/js/hashers/octree/static-octree.js"></script>
-    <script src="../../src/js/hashers/octree/flattened-statistical-octree.js"></script>
     <script src="../../src/js/interpolator.js"></script>
     <script src="../../src/js/kernal.js"></script>
     <script src="../../src/js/particle-solver.js"></script>
@@ -23,8 +21,9 @@
     <script src="../../src/js/collision-systems/static-scene.js"></script>
     <script src="../../src/js/particle-filler/particle-filler.js"></script>
     <script src="../../src/js/components/fluid-params.js"></script>
-    <script src="../../src/js/components/debug-fluid.js"></script>
+    <script src="../../src/js/components/fluid-debugger.js"></script>
     <script src="../../src/js/primitives/a-fluid-system.js"></script>
+    <script src="../../src/js/primitives/a-fluid-debugger.js"></script>
 
     <script type="text/javascript">
       var perfDebug = new PerformanceDebugger();
@@ -37,6 +36,9 @@
       <a-assets>
         <a-asset-item id="containment-box" src="3d-models/containment-box.gltf">
       </a-assets>
+
+      <!--While we slowly build this out, it's helpful to see what the basic components look like underneath.-->
+      <a-fluid-debugger fluid-debugger="particleSystemId: my-particle-system; drawParticleSystem: true"></a-fluid-debugger>
 
       <!-- The id for the particle system is used by all child elements belonging to it-->
       <!-- NOTE: this must be at the end, so that previous model data is loaded into the system -->
