Fixed our BCC code a few bugs and fixed the bug associated with our removal of the inverse radius on the particle constants that turns out to be useful and important.

--- a/examples/breaking_dam/breaking_dam.html
+++ b/examples/breaking_dam/breaking_dam.html
@@ -15,7 +15,7 @@
     <script src="../../src/js/hashers/bucket-grid/bucket-grid.js"></script>
     <script src="../../src/js/interpolator.js"></script>
     <script src="../../src/js/kernal.js"></script>
-    <script src="../../src/js/particle-solver.js"></script>
+    <script src="../../src/js/PCISPHSystemSolver.js"></script>
     <script src="../../src/js/particle-system.js"></script>
     <script src="../../src/js/particle.js"></script>
     <script src="../../src/js/collision-systems/static-scene.js"></script>
