--- a/examples/breaking_dam/breaking_dam.html
+++ b/examples/breaking_dam/breaking_dam.html
@@ -40,7 +40,7 @@
       </a-assets>
 
       <!--While we slowly build this out, it's helpful to see what the basic components look like underneath.-->
-      <a-fluid-debugger fluid-debugger="particleSystemId: my-particle-system; drawStaticMesh: true; drawFillPoints: true; drawMovingBuckets: true; drawCollidedBuckets: true; drawSPHTestSpheres: true;"></a-fluid-debugger>
+      <a-fluid-debugger fluid-debugger="particleSystemId: my-particle-system; drawStaticMesh: true; drawFillPoints: true; drawMovingBuckets: true; drawCollidedBuckets: false; drawSPHTestSpheres: true;"></a-fluid-debugger>
 
       <!-- The id for the particle system is used by all child elements belonging to it-->
       <!-- NOTE: this must be at the end, so that previous model data is loaded into the system -->
@@ -50,7 +50,7 @@
       <!-- A Wall of Particles That Lives in This System -->
       <!-- HEY! We take our units in metric over here like the rest of the world! -->
       <!-- Any shape can be filled with uniform density with a fluid, the class says who the parent particle system is -->
-      <a-box class="fluid my-particle-system" position="0.0 1.0 0.0" depth="1.0" height="0.5" width="1.0"></a-box>
+      <a-box class="fluid my-particle-system" position="0.0 1.0 0.0" depth="1.0" height="0.51" width="1.0"></a-box>
 
       <!-- Obstacle box -->
       <!-- static-fluid-obstacle tells us that this obstacle is unlikely to move, and that's a good thing. -->
