--- a/examples/breaking_dam/breaking_dam.html
+++ b/examples/breaking_dam/breaking_dam.html
@@ -39,6 +39,10 @@
         <a-asset-item id="containment-box" src="3d-models/containment-box.gltf">
       </a-assets>
 
+      <a-entity id='cameraWrapper' position="0 0 5">
+        <a-camera></a-camera>
+      </a-entity>
+
       <!--While we slowly build this out, it's helpful to see what the basic components look like underneath.-->
       <a-fluid-debugger fluid-debugger="particleSystemId: my-particle-system; drawStaticMesh: true; drawFillPoints: true; drawMovingBuckets: true; drawCollidedBuckets: false; drawSPHTestSpheres: true;"></a-fluid-debugger>
 
@@ -50,7 +54,7 @@
       <!-- A Wall of Particles That Lives in This System -->
       <!-- HEY! We take our units in metric over here like the rest of the world! -->
       <!-- Any shape can be filled with uniform density with a fluid, the class says who the parent particle system is -->
-      <a-box class="fluid my-particle-system" position="0.0 1.0 0.0" depth="0.3" height="0.3" width="0.3"></a-box>
+      <a-box class="fluid my-particle-system" position="1.5 0.0 0.0" depth="2.5" height="3.0" width="2.5"></a-box>
 
       <!-- Obstacle box -->
       <!-- static-fluid-obstacle tells us that this obstacle is unlikely to move, and that's a good thing. -->
