--- a/examples/shaders/shader-tester.html
+++ b/examples/shaders/shader-tester.html
@@ -10,6 +10,8 @@
     <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/noise-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/h_0-shader.js"></script>
+    <script src="../../src/js/ocean-system/shaders/LUTS/h_k-shader.js"></script>
+    <script src="../../src/js/ocean-system/shaders/LUTS/compute-twiddle-indices.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/static-lut-renderer.js"></script>
     <script src="js/init-scene.js"></script>
 
