Substage commit while I debug the final stage of this branch.

--- a/examples/shaders/shader-tester.html
+++ b/examples/shaders/shader-tester.html
@@ -11,6 +11,8 @@
     <script src="../../src/js/ocean-system/shaders/LUTS/noise-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/h_0-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/h_k-shader.js"></script>
+    <script src="../../src/js/ocean-system/shaders/LUTS/pingpong-shader.js"></script>
+    <script src="../../src/js/ocean-system/shaders/LUTS/fft-inverter-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/compute-twiddle-indices.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/static-lut-renderer.js"></script>
     <script src="js/init-scene.js"></script>
