--- a/examples/shaders/shader-tester.html
+++ b/examples/shaders/shader-tester.html
@@ -8,6 +8,7 @@
     <!--Meta-->
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no,user-scalable=no,maximum-scale=1">
     <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
+    <script src="../../src/js/GPUComputeRenderer.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/noise-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/h_0-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/h_k-shader.js"></script>
@@ -15,6 +16,8 @@
     <script src="../../src/js/ocean-system/shaders/LUTS/fft-inverter-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/compute-twiddle-indices.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/static-lut-renderer.js"></script>
+    <script src="../../src/js/ocean-system/shaders/LUTS/test-output-shader.js"></script>
+
     <script src="js/init-scene.js"></script>
 
   <!--Scene Scripts-->
