Working up to creating a FFT transform from the twiddle texture though it does not work yet.

--- a/examples/shaders/shader-tester.html
+++ b/examples/shaders/shader-tester.html
@@ -18,6 +18,8 @@
     <script src="../../src/js/ocean-system/shaders/LUTS/compute-twiddle-indices.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/static-lut-renderer.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/test-output-shader.js"></script>
+    <script src="../../src/js/ocean-system/shaders/LUTS/twiddle-shader.js"></script>
+    <script src="../../src/js/ocean-system/shaders/LUTS/butterfly-shader.js"></script>
 
     <script src="js/init-scene.js"></script>
 
