Fixed up a lot of code that gets us to the final push. I now also have fully viweable textures in my sample image by getting correct UV mapping.

--- a/examples/shaders/shader-tester.html
+++ b/examples/shaders/shader-tester.html
@@ -20,6 +20,7 @@
     <script src="../../src/js/ocean-system/shaders/LUTS/test-output-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/twiddle-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/butterfly-shader.js"></script>
+    <script src="../../src/js/ocean-system/shaders/LUTS/wave-height-shader.js"></script>
 
     <script src="js/init-scene.js"></script>
 
