Ocean height map is now working. It is time to have some fun.

--- a/examples/shaders/birds.html
+++ b/examples/shaders/birds.html
@@ -15,7 +15,7 @@
 			}
 		</style>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/109/three.min.js"></script>
+		<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 		<script src="../../src/js/GUI.js"></script>
 		<script src="../../src/js/Stats.js"></script>
 		<script src="../../src/js/GPUComputeRenderer.js"></script>
