--- a/examples/ocean/islands.html
+++ b/examples/ocean/islands.html
@@ -19,6 +19,7 @@
     <script src="../../src/js/ocean-system/shaders/LUTS/test-output-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/butterfly-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/wave-height-shader.js"></script>
+    <script src="../../src/js/ocean-system/shaders/LUTS/wave-normal-map-shader.js"></script>
     <script src="../../src/js/ocean-system/ocean-heightmap.js"></script>
     <script src="../../src/js/ocean-system/ocean-patch.js"></script>
     <script src="../../src/js/ocean-system/ocean-grid.js"></script>
