Got the basic code in fixed the syntax errors. I am now moving on to the logic errors.

--- a/examples/ocean/islands.html
+++ b/examples/ocean/islands.html
@@ -18,8 +18,10 @@
     <script src="../../src/js/ocean-system/shaders/LUTS/static-lut-renderer.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/test-output-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/butterfly-shader.js"></script>
+    <script src="../../src/js/ocean-system/shaders/LUTS/butterfly-0-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/wave-height-shader.js"></script>
     <script src="../../src/js/ocean-system/shaders/LUTS/wave-normal-map-shader.js"></script>
+    <script src="../../src/js/ocean-system/ocean-material-hk-library.js"></script>
     <script src="../../src/js/ocean-system/ocean-heightmap.js"></script>
     <script src="../../src/js/ocean-system/ocean-patch.js"></script>
     <script src="../../src/js/ocean-system/ocean-grid.js"></script>
