Implementing cubemaps for custom reflection, refraction and material fog.

--- a/examples/ocean/islands.html
+++ b/examples/ocean/islands.html
@@ -31,6 +31,9 @@
     <script src="../../src/js/ocean-system/materials/fft-waves/wave-composer.js"></script>
     <script src="../../src/js/ocean-system/materials/fft-waves/wave-height.js"></script>
     <script src="../../src/js/ocean-system/materials/fft-waves/wave-normal-map.js"></script>
+
+    <script src="../../src/js/ocean-system/materials/ocean-material/water-shader.js"></script>
+
     <script src="../../src/js/ocean-system/luts/ocean-height-band-library.js"></script>
     <script src="../../src/js/ocean-system/luts/ocean-height-composer.js"></script>
     <script src="../../src/js/ocean-system/components/ocean-patch.js"></script>
