--- a/examples/ocean-sky/ocean.html
+++ b/examples/ocean-sky/ocean.html
@@ -13,7 +13,7 @@
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 
     <!-- Our Minified Library -->
-
+    <script src="../../dist/a-water.v0.1.0.min.js"></script>
 
     <!-- If you're using this library, include it after <a-water> as it also includes an <a-ocean> tag and will break the library. -->
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
@@ -29,9 +29,10 @@
       </a-entity>
 
       <!-- A default sky -->
-      <a-sun-sky></a-sun-sky>
+      <a-sun-sky material="side:back; sunPosition: 1.0 1.0 0.0"></a-sun-sky>
 
-      <!-- The ocean we want to create -->
+      <!-- The ocean we want to create. It works better with things to refract and real time lighting,
+      but this gives an idea of the most basic setup. -->
       <a-ocean></a-ocean>
     </a-scene>
   </body>
